--- a/final_project/frontend/src/app/review/reviewcreate/review-list/review-list.component.html
+++ b/final_project/frontend/src/app/review/reviewcreate/review-list/review-list.component.html
@@ -1,4 +1,4 @@
-
+<div class="wrapper">
 <mat-accordion [multi]="true">
   <mat-expansion-panel id="acc" *ngFor="let review of reviews">
     <mat-expansion-panel-header>
@@ -8,3 +8,4 @@
     <p id="stars">{{review.stars}} Stars</p>
   </mat-expansion-panel>
 </mat-accordion>
+</div>
