--- a/final_project/frontend/src/app/reservation-display/reservation-display.component.html
+++ b/final_project/frontend/src/app/reservation-display/reservation-display.component.html
@@ -1,3 +1,4 @@
 <main>
-  <app-reservationcreate id="text"></app-reservationcreate>
+  <app-reservationcreate id="reservationCreate"></app-reservationcreate>
+  <!-- <app-reservation-list id="list"></app-reservation-list> -->
 </main>
